--- a/serializationAvro/build.gradle
+++ b/serializationAvro/build.gradle
@@ -22,16 +22,21 @@ sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
+	maven {
+		url = 'https://packages.confluent.io/maven/'
+	}
 }
 
 dependencies {
 	compile 'org.apache.avro:avro-compiler:1.8.2'
+	implementation 'io.confluent:kafka-avro-serializer:5.3.0'
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation'org.apache.kafka:kafka_2.13:2.5.0'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 avro {
-	createSetters = false
+	createSetters = true
 }
 
 test {
