--- a/serializationAvro/src/main/resources/application.properties
+++ b/serializationAvro/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+bootstrap.servers=localhost:9092
+key.serializer=org.apache.kafka.common.serialization.StringSerializer
+value.serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
+key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+value.deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
+topic=example1-test
+group.id=test-group
+schema.registry.url=http://localhost:8081
+specific.avro.reader=true
